app-bookinfo/networking/virtual-service-ratings.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  # Fault Injection
  # https://istio.io/latest/docs/tasks/traffic-management/fault-injection/
  - match:
    - headers:
        end-user:
          exact: abort
    fault:
      abort:
        percentage:
          value: 100.0
        httpStatus: 500
    route:
    - destination:
        host: ratings
        subset: v1
  - match:
    - headers:
        end-user:
          exact: delay
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 7s
    route:
    - destination:
        host: ratings
        subset: v1
  - route:
    - destination:
        host: ratings
        subset: v1
